# HuaXia_TourismRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: README.md  manifest.json
assets/models/: README.md
data/internal/: README.md  china_tourism_policy_transport_rules_60.jsonl  verified_china_tourism_seed.jsonl
evals/: citation_faithfulness_cases.json  destination_evidence_cases.json  engagement_feed_cases.json  manual_itinerary_quality.md  speed_v3_benchmarks.json  topic_section_quality_cases.md
frontend/: .gitignore  README.md  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/scripts/: trim-generated.mjs
frontend/src/: App.tsx  index.css  main.tsx
scripts/: __init__.py  benchmark_latency.py  download_sketchfab_model.py  export_openapi.py  sync_frontend_assets.py
test/: test_main.py
tests/: test_answer_performance_trace.py  test_baidu_maps_mcp.py  test_bootstrap.py  test_chunking.py  test_citation_formatter.py  test_citation_guard.py  test_cli.py  test_context_budgeter.py  test_diy_itinerary_planner.py  test_diy_itinerary_service.py  test_dto_checkpoint_policy.py  test_embeddings.py  test_engagement_feed_agent.py  test_engagement_feed_graph.py  test_engagement_feed_schemas.py  test_engagement_feed_service.py  test_evidence_coverage.py  test_evidence_merge.py  test_evidence_pack_cache.py  test_evidence_relevance.py  test_evidence_retrieval_orchestrator.py  test_evidence_source_policy.py  test_firecrawl_mcp.py  test_frontend_asset_sync.py  test_internal_corpus_builder.py  test_internal_corpus_coverage.py  test_internal_indexer.py  test_internal_rag.py  test_itinerary_schedule_quality.py  test_job_queue.py  test_job_store.py  test_lightweight_imports.py  test_main.py  test_mapbox_mcp.py  test_mcp_client.py  test_model_runtime.py  test_official_source_importers.py  test_performance.py  test_project_health.py  test_prompt_compaction.py  (+29 more)
(+142 files in other folders)
