[project]
name = "huaxia-tourismrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.1",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.1",
    "sqlmodel>=0.0.38",
    "torch>=2.12.0",
    "trafilatura>=2.0.0",
    "transformers>=5.9.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
