[project]
name = "huaxia-tourismrag"
version = "0.1.0"
description = "HuaXia Travel Agency's agentic web-augmented RAG assistant for Chinese domestic tourism planning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.1",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openai]>=1.101.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.1",
    "qdrant-client>=1.18.0",
    "questionary>=2.1.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.1",
    "sqlmodel>=0.0.38",
    "streamlit>=1.41",
    "torch>=2.12.0",
    "trafilatura>=2.0.0",
    "transformers>=4.44.2,<5",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
huaxia-tourismrag = "huaxia_tourismrag.cli:app"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huaxia_tourismrag"]
